--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 server.port=8092
 
 #spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/board?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-spring.datasource.username=suhan
+spring.datasource.url=jdbc:mysql://localhost:3306/techbank?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=root
 spring.datasource.password=201610
+spring.jpa.hibernate.use-new-id-generator-mappings=false
