--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=8092
 
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/techbank?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=201610
