--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 server.port=8092
 
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/techbank?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-spring.datasource.username=root
+spring.datasource.username=suhan
 spring.datasource.password=201610
-spring.jpa.hibernate.use-new-id-generator-mappings=false
