--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,16 @@
 server.port=8092
 
 #spring.jpa.hibernate.ddl-auto=
+
+
+# 머스타쉬
+spring.mustache.expose-session-attributes=true
+
+spring.mustache.expose-request-attributes=true
+
+
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/techbank?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=suhan
 spring.datasource.password=201610
+
